# Part of the MUST Project, under BSD-3-Clause License
# See https://hpc.rwth-aachen.de/must/LICENSE for license information.
# SPDX-License-Identifier: BSD-3-Clause
#
# @file CMakeLists.cmake
#       CMake file for the doc.
#
# @author Tobias Hilbrich
# @date 30.08.2011

#Add subdirectories
ADD_SUBDIRECTORY(manual EXCLUDE_FROM_ALL)
